--- a/subscribe/templates/subscribe/subscribe.html
+++ b/subscribe/templates/subscribe/subscribe.html
@@ -7,16 +7,23 @@
     <title>Subscribe Form</title>
 </head>
 <body>
-      <form>
+      <form method="post">
+        {% csrf_token %}
+
+        {% if email_error %}
+          <p>{{email_error}} </p>
+        {% endif %}
+
+
         <label for="f_name">First Name</label>
-        <input type="text" id="f_name" name="firstname" placeholder="Your First Name">
-    
+        <input type="text" id="f_name" name="firstname" placeholder="Your First Name" required>
+        <br>
         <label for="l_name">Last Name</label>
-        <input type="text" id="l_name" name="lastname" placeholder="Your Last Name">
-    
+        <input type="text" id="l_name" name="lastname" placeholder="Your Last Name" required>
+        <br>
         <label for="email">Email</label>
-        <input type="email" id="email" name="email" placeholder="Your Email">
-    
+        <input type="email" id="email" name="email" placeholder="Your Email" required>
+        <br>
         <input type="submit" value="Submit">
     
       </form>
