--- a/subscribe/templates/subscribe/subscribe.html
+++ b/subscribe/templates/subscribe/subscribe.html
@@ -9,12 +9,13 @@
 <body>
       <form method="post">
         {% csrf_token %}
+          {{form}}
+          <input type = "submit" value="Submit">
 
+        {% comment %} {% csrf_token %}
         {% if email_error %}
           <p>{{email_error}} </p>
         {% endif %}
-
-
         <label for="f_name">First Name</label>
         <input type="text" id="f_name" name="firstname" placeholder="Your First Name" required>
         <br>
@@ -24,7 +25,7 @@
         <label for="email">Email</label>
         <input type="email" id="email" name="email" placeholder="Your Email" required>
         <br>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit"> {% endcomment %}
     
       </form>
     
