--- a/app/templates/app/job_detail.html
+++ b/app/templates/app/job_detail.html
@@ -1,9 +1,48 @@
-<!-- Here is an example of URL tage (reverse resolution here)-->
-<a href= "{% url 'jobs_home' %}">
-    <h4> Home </h4>
-</a>    
-
-
-<h1> {{job.title}} </h1>
-<h1>{{job.description}} </h1>
-<h1>{{job.salary}} </h1>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'app/style.css' %}" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
+      rel="stylesheet"
+    />
+    <title>View job</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <div class="container">
+          <div class="logo">
+            <img src="{% static 'app/logo.svg' %}" alt="" />
+          </div>
+          <div class="links">
+            <a href="{% url 'jobs_home' %}">Home</a>
+          </div>
+          <span class="material-icons menu" onclick="menu()"> menu </span>
+        </div>
+      </nav>
+    </header>
+    <section>
+      <div class="container">
+        <div class="view-post">
+          <h1 class="jobtitle">
+            {{job.title}}
+          </h1>
+          <p class="location it">Location: <span>{{job.location.city}}</span></p>
+          <p class="status it">Type: <span>Full time</span></p>
+          <p class="budget it">Salary: <span>{{job.salary}}</span></p>
+          <div class="desc">
+            <p class="details">
+              {{job.description}}
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script src="{% static 'app/app.js' %}"></script>
+  </body>
+</html>
