Rest of js is added

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -78,6 +78,11 @@
                                     <span class="material-icons"> attach_money </span>
                                     <p>{{job.salary}}</p>
                                     </div>
+                                    </div>
+                                    <div class="time item">
+                                    <span class="material-icons"> Schedule </span>
+                                    <p>{{job.type}}</p>
+                                    </div>
                                 </div>
                                 </div>
                                 <div class="buttons">
