--- a/app/templates/app/job_detail.html
+++ b/app/templates/app/job_detail.html
@@ -33,7 +33,7 @@
             {{job.title}}
           </h1>
           <p class="location it">Location: <span>{{job.location.city}}</span></p>
-          <p class="status it">Type: <span>Full time</span></p>
+          <p class="status it">Type: <span>{{job.type}}</span></p>
           <p class="budget it">Salary: <span>{{job.salary}}</span></p>
           <div class="desc">
             <p class="details">
