--- a/subscribe/templates/subscribe/subscribe.html
+++ b/subscribe/templates/subscribe/subscribe.html
@@ -1,60 +1,57 @@
-{% comment %} This line helps you to use static tags and enables you to use it for embedied links of static {% endcomment %}
-{% load static%}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% comment %} Django by default scans within the static folder of the project {% endcomment %}
-    <link rel='stylesheet' type='text/css' href="{% static 'subscribe/main.css' %}">
-    <title>Subscribe Form</title>
-</head>
-<body>
-    <h1> <img src="{% static 'subscribe/image.jpg' %}" alt="subscribe"> Subscribe Form </h1>
-      <form method="post">
-        {% csrf_token %}
-
-        {% comment %} 1- Using Djano completely {% endcomment %}
-          {{form.as_ul}}
-          <input type = "submit" value="Submit">
-
-        {% comment %} 2- Getting info using for loops {% endcomment %}
-        {% comment %} {% for field in form %}
-          <div class = "subscribe_field">
-            {{field.errors}}
-            <label for = "{{field.id_for_label}}">
-              {{field.label}}
-            </label>
-            {{field}}
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'app/style.css' %}" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
+      rel="stylesheet"
+    />
+    <title>Subscribe</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <div class="container">
+          <div class="logo">
+            <img src="{% static 'app/logo.svg' %}" alt="" />
           </div>
-        {% endfor %} {% endcomment %}
-
-
-
-
-        {% comment %} 3- Manually getting Info {% endcomment %}
-        {% comment %} {% csrf_token %}
-        {% if email_error %}
-          <p>{{email_error}} </p>
-        {% endif %}
-        <label for="f_name">First Name</label>
-        <input type="text" id="f_name" name="firstname" placeholder="Your First Name" required>
-        <br>
-        <label for="l_name">Last Name</label>
-        <input type="text" id="l_name" name="lastname" placeholder="Your Last Name" required>
-        <br>
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" placeholder="Your Email" required>
-        <br>
-        <input type="submit" value="Submit"> {% endcomment %}
-    
-      </form>
-      <button onclick = "popup()"> Click Me! </button>
-
-      <script src= "{% static 'subscribe/main.js' %}">
-
-      </script>
-    
-</body>
+          <div class="links">
+            <a href="{% url 'jobs_home' %}">Home</a>
+          </div>
+          <span class="material-icons menu" onclick="menu()"> menu </span>
+        </div>
+      </nav>
+    </header>
+    <section>
+      <div class="container">
+          <form class="email-form">
+            <p>
+              <label for="id_first_name">Enter First Name:</label>
+              <input type="text" name="first_name" maxlength="100" required id="id_first_name">
+            </p>
+            <p>
+              <label for="id_last_name">Enter Last Name:</label>
+              <input type="text" name="last_name" maxlength="100" required id="id_last_name">
+            </p>
+            <p>
+              <label for="id_email">Enter Email:</label>
+              <input type="email" name="email" maxlength="100" required id="id_email"> 
+            </p>
+            <p>
+              <label for="id_option">Option:</label>
+              <select name="option" id="id_option">
+            <option value="W">Weekly</option>
+            <option value="M" selected>Monthly</option>
+          </select>
+            </p>
+          <button class="email-submit">Submit</button>
+    </div>
+      </div>
+    </section>
+    <script src="{% static 'app/app.js' %}"></script>
+  </body>
 </html>
