Inheritence with templates

--- a/app/templates/app/job_detail.html
+++ b/app/templates/app/job_detail.html
@@ -1,4 +1,8 @@
-{% load static %}
+
+{% extends 'base.html' %}
+
+{% comment %} First Method {% endcomment %}
+{% comment %} {% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -45,4 +49,29 @@
     </section>
     <script src="{% static 'app/app.js' %}"></script>
   </body>
-</html>
+</html> {% endcomment %}
+
+
+
+{% comment %} Second Method {% endcomment %}
+{% block title %}FlixCareers | {{job.title}}{% endblock title %}
+{% block content %}
+
+      <section>
+        <div class="container">
+          <div class="view-post">
+            <h1 class="jobtitle">
+              {{job.title}}
+            </h1>
+            <p class="location it">Location: <span>{{job.location.city}}</span></p>
+            <p class="status it">Type: <span>{{job.type}}</span></p>
+            <p class="budget it">Salary: <span>{{job.salary}}</span></p>
+            <div class="desc">
+              <p class="details">
+                {{job.description}}
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+{% endblock content %}
