--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 {% comment %} <ul>
 {% for item in information %}
         <li> 
@@ -33,6 +34,8 @@
   {% endcomment %}
 
 
+{% comment %} Second Way: {% endcomment %}
+{% comment %}  
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -98,3 +101,49 @@
         <script src="{% static 'app/app.js' %}"></script>
     </body>
 </html> 
+% endcomment %}
+
+
+
+
+{% comment %} With Inheritence {% endcomment %}
+{% block title %}FlixCareers | Home{% endblock title %}
+{% block content %}
+    <section>
+        <div class="container">
+            {% for job in jobs%}
+                    <!-- job post -->
+                    <div class="post">
+                        <!-- title and des -->
+                        <div class="job-info">
+                        <h1 class="job-title">{{job.title}}</h1>
+                        <div class="job-des">
+                            <div class="location item">
+                            <span class="material-icons"> place </span>
+                            <p>{{job.location.city}}</p>
+                            </div>
+                            <div class="budget item">
+                            <span class="material-icons"> attach_money </span>
+                            <p>{{job.salary}}</p>
+                            </div>
+                            </div>
+                            <div class="time item">
+                            <span class="material-icons"> Schedule </span>
+                            <p>{{job.type}}</p>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="buttons">
+                        <button class="apply">
+                            <a href="{% url 'jobs_detail' job.id %}">View Job</a>
+                        </button>
+                        </div>
+                    </div>
+                    <!-- job post end-->           
+            {%endfor%}
+        </div>
+    </section>
+
+{% endblock content %}
+
+
