--- a/subscribe/templates/subscribe/subscribe.html
+++ b/subscribe/templates/subscribe/subscribe.html
@@ -1,4 +1,8 @@
-{% load static %}
+{% extends 'base.html' %}
+
+
+{% comment %} First Method {% endcomment %}
+{% comment %} {% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -54,4 +58,20 @@
     </section>
     <script src="{% static 'app/app.js' %}"></script>
   </body>
-</html>
+</html> {% endcomment %}
+
+{% comment %} Second Method {% endcomment %}
+
+{% block title %}FlixCareers | Subscribe{% endblock title %}
+{% block content %}
+    <section>
+      <div class="container">
+            <form class="email-form" method="post">
+              {% csrf_token %}
+              {{form.as_p}}
+            <button class="email-submit">Submit</button>
+            </form>
+      </div>
+    </section> 
+
+{% endblock content %}
